# rust-web-server

./: .gitignore  Cargo.toml
src/: main.rs
src/models/: booking_model.rs  dog_model.rs  mod.rs  owner_model.rs
src/routes/: booking_route.rs  dog_route.rs  owner_route.rs
src/services/: db.rs
