[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
futures-util = "0.3.31"
serde = "1.0.228"
dotenv = "0.15.0"
serde_json = "1.0.104"
tokio = { version = "1.41.0", features = ["full"] }

[dependencies.mongodb]
version = "3.4.1"